negaflow-windows/src/Native/abi/include/negaflow/abi/develop_entry.h

/* Blocking. Safe to call from a worker thread; touches no UI and no global state.
   Returns NF_STATUS_OK when the call was well formed, which is not the same as the
   develop succeeding — read result->succeeded for that. */
NF_API nf_status_t NF_CALL nf_develop_export_v1(
    const nf_develop_export_request_v1* request,
    nf_develop_export_result_v1* result);
NF_API nf_status_t NF_CALL nf_develop_export_v2(
    const nf_develop_export_request_v2* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v3(
    const nf_develop_export_request_v3* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v4(
    const nf_develop_export_request_v4* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v5(
    const nf_develop_export_request_v5* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v6(
    const nf_develop_export_request_v6* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v7(
    const nf_develop_export_request_v7* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v8(
    const nf_develop_export_request_v8* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v9(
    const nf_develop_export_request_v9* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v10(
    const nf_develop_export_request_v10* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v11(
    const nf_develop_export_request_v11* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v12(
    const nf_develop_export_request_v12* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v13(
    const nf_develop_export_request_v13* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v14(
    const nf_develop_export_request_v14* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v15(
    const nf_develop_export_request_v15* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v16(
    const nf_develop_export_request_v16* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v17(
    const nf_develop_export_request_v17* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v18(
    const nf_develop_export_request_v18* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v19(
    const nf_develop_export_request_v19* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v20(
    const nf_develop_export_request_v20* request,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_export_v21(
    const nf_develop_export_request_v21* request,
    nf_develop_export_result_v2* result);